--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,12 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["django>=5.1.5", "django-environ>=0.12.0", "pillow>=11.1.0"]
+dependencies = [
+  "django>=5.1.5",
+  "django-cors-headers>=4.7.0",
+  "django-environ>=0.12.0",
+  "pillow>=11.1.0",
+]
 
 [tool.pyright]
 venvPath = "."
