--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
   "django-cors-headers>=4.7.0",
   "django-environ>=0.12.0",
   "pillow>=11.1.0",
+  "pokebase>=1.4.1",
+  "requests>=2.32.3",
 ]
 
 [tool.pyright]
